; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_notify_setacl.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_vfs.c_mac_vnode_notify_setacl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }
%struct.kauth_acl = type { i32 }

@vnode_notify_setacl = common dso_local global i32 0, align 4
@mac_vnode_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_vnode_notify_setacl(i32 %0, %struct.vnode* %1, %struct.kauth_acl* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.vnode*, align 8
  %6 = alloca %struct.kauth_acl*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.vnode* %1, %struct.vnode** %5, align 8
  store %struct.kauth_acl* %2, %struct.kauth_acl** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @vfs_context_ucred(i32 %8)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @mac_cred_check_enforce(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  br label %23

14:                                               ; preds = %3
  %15 = load i32, i32* @vnode_notify_setacl, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.vnode*, %struct.vnode** %5, align 8
  %18 = load %struct.vnode*, %struct.vnode** %5, align 8
  %19 = getelementptr inbounds %struct.vnode, %struct.vnode* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.kauth_acl*, %struct.kauth_acl** %6, align 8
  %22 = call i32 @MAC_PERFORM(i32 %15, i32 %16, %struct.vnode* %17, i32 %20, %struct.kauth_acl* %21)
  br label %23

23:                                               ; preds = %14, %13
  ret void
}

declare dso_local i32 @vfs_context_ucred(i32) #1

declare dso_local i32 @mac_cred_check_enforce(i32) #1

declare dso_local i32 @MAC_PERFORM(i32, i32, %struct.vnode*, i32, %struct.kauth_acl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
